--- a/views/admin.twig
+++ b/views/admin.twig
@@ -10,7 +10,8 @@
 	<ul>
         <li><a href="users/add">Add user</a></li>
         <li><a href="jobs/add">Add job </a></li>
+		<li><a href="projects/add">Add Project </a></li>
     </ul>
 <br><br>
-<a href="/logout">Logout</a>
+<a href="/app-php/logout">Logout</a>
 {% endblock %}
