--- a/views/index.twig
+++ b/views/index.twig
@@ -42,8 +42,10 @@
 				<h3 class="border-bottom-gray">Work Experience</h3>
 				<ul>
 					{% for job in jobs %}
-						<li class="work-position">
-							<img id="file-picture" src="../public/uploads/"{{job.file}} alt="">
+						<li class="row work-position">
+							<div class="col-3">
+								<img id="file-picture" src="{{job.getImage(job.title)}}" width="50" height="50">	
+							</div>
 							<h5>{{ job.title}}</h5>
 							<p>{{ job.description}}
 							</p>
@@ -55,7 +57,10 @@
 				<h3 class="border-bottom-gray">Projects</h3>
 				<ul>
 					{% for project in projects %}
-						<li class="work-position">
+						<li class="row work-position">
+							<div class="col-3">
+								<img id="file-picture" src="{{project.getImage(project.title)}}" width="50" height="50">	
+							</div>
 							<h5>{{ project.title}}</h5>
 							<p>{{ project.description}}
 							</p>
